Add Virus Classic + Major refactor un MidiPresetBuilder