@@ -7,6 +7,8 @@ import com.hypercube.workshop.midiworkshop.api.sysex.library.device.MidiDeviceDe
 import com.hypercube.workshop.midiworkshop.api.sysex.library.device.MidiDeviceMode;
 import com.hypercube.workshop.midiworkshop.api.sysex.macro.CommandCall;
 import com.hypercube.workshop.midiworkshop.api.sysex.macro.CommandMacro;
+import lombok.Getter;
+import lombok.Setter;
 import lombok.experimental.UtilityClass;
 
 import javax.sound.midi.InvalidMidiDataException;
@@ -27,69 +29,97 @@ import java.util.stream.Stream;
 @UtilityClass
 public class MidiPresetBuilder {
     private static final Pattern COMMAND_REGEXP = Pattern.compile("\\s*([A-F0-9]{2})");
-    private static Pattern PRESET_REGEXP = Pattern.compile("(?<id1>[0-9]+)(-(?<id2>[0-9]+))?(-(?<id3>[0-9]+))?");
+    private static final Pattern PRESET_REGEXP = Pattern.compile("(?<id1>[0-9]+)(-(?<id2>[0-9]+))?(-(?<id3>[0-9]+))?");
 
-    public static MidiPreset parse(File configFile, int zeroBasedChannel, MidiBankFormat midiBankFormat, String title, List<CommandMacro> macros, List<String> commands, List<Integer> controlChanges, List<DrumKitNote> drumKitNotes) {
-        List<MidiMessage> messages = commands.stream()
-                .flatMap(cmd -> parseCommand(configFile, zeroBasedChannel, midiBankFormat, macros, cmd))
-                .toList();
-        return new MidiPreset(null, null, title, zeroBasedChannel, messages, controlChanges, drumKitNotes, midiBankFormat);
+    /**
+     * Used by SynthRipper and MPM. TODO: since SynthRipper don't use MidiDeviceLibrary macros, we need this method
+     */
+    public static MidiPreset parse(MidiDeviceDefinition device, int zeroBasedChannel, String title, List<CommandMacro> macros, List<String> commands, List<Integer> controlChanges, List<DrumKitNote> drumKitNotes) {
+        var ctx = BuildContext.of(device, zeroBasedChannel);
+        ctx.setMidiMessages(forgeCommands(macros, commands, ctx));
+        return new MidiPreset(null, null, title, ctx.getChannel(), ctx.getMidiMessages(), controlChanges, drumKitNotes, ctx.getMidiBankFormat(), ctx.getIdentifiers());
     }
 
+    /**
+     * Main entry point. Used by {@link com.hypercube.workshop.midiworkshop.api.presets.generic.MidiPresetCrawler}
+     */
     public static MidiPreset parse(MidiDeviceDefinition device, MidiDeviceMode deviceMode, MidiDeviceBank bank, int program) {
-        return new MidiPreset(deviceMode.getName(), bank.getName(), null, bank.getZeroBasedChannel(), forgeCommands(device, bank, program), device.getPresetFormat());
+        var ctx = BuildContext.of(device, bank.getZeroBasedChannel());
+        ctx.setMidiMessages(forgeCommands(ctx, bank, program));
+        return new MidiPreset(deviceMode.getName(), bank.getName(), null, ctx.getChannel(), ctx.getMidiMessages(), ctx.getMidiBankFormat(), ctx.getIdentifiers());
     }
 
+    /**
+     * Used by SteinbergScriptFileParser, to generate sound canvas presets. TODO: remove that
+     */
     public static MidiPreset parse(String title, MidiDeviceDefinition device, int zeroBasedChannel, int bankMSB, int bankLSB, int program) {
         String bankName = String.format("$%X", (bankMSB << 8) | bankLSB);
-        return new MidiPreset(null, bankName, title, zeroBasedChannel, forgeCommands(device, zeroBasedChannel, bankMSB, bankLSB, program), List.of(), List.of(), device.getPresetFormat());
+        var ctx = BuildContext.of(device, zeroBasedChannel)
+                .setIdentifiers(bankMSB, bankLSB, program);
+        ctx.setMidiMessages(forgeCommands(ctx));
+        return new MidiPreset(null, bankName, title, ctx.getChannel(), ctx.getMidiMessages(), List.of(), List.of(), ctx.getMidiBankFormat(), ctx.getIdentifiers());
     }
 
+    /**
+     * Used by {@link com.hypercube.workshop.midiworkshop.api.presets.yamaha.XGSpecParser} which is hidden in Unit tests. TODO: remove that
+     */
     public static MidiPreset parse(String bankName, String presetName, String presetCategory, MidiDeviceDefinition device, int zeroBasedChannel, int bankMSB, int bankLSB, int program) {
-        return new MidiPreset(null, bankName, presetName, presetCategory, zeroBasedChannel, forgeCommands(device, zeroBasedChannel, bankMSB, bankLSB, program), new ArrayList<>(), new ArrayList<>(), device.getPresetFormat());
+        var ctx = BuildContext.of(device, zeroBasedChannel)
+                .setIdentifiers(bankMSB, bankLSB, program);
+        ctx.setMidiMessages(forgeCommands(ctx));
+        return new MidiPreset(null, bankName, presetName, presetCategory, ctx.getChannel(), ctx.getMidiMessages(), new ArrayList<>(), new ArrayList<>(), device.getPresetFormat(), ctx.getIdentifiers());
     }
 
-    public static List<MidiMessage> forgeCommands(MidiDeviceDefinition device, MidiDeviceBank bank, int program) {
+    private static List<MidiMessage> forgeCommands(List<CommandMacro> macros, List<String> commands, BuildContext ctx) {
+        return commands.stream()
+                .flatMap(cmd -> parseCommand(ctx, macros, cmd))
+                .toList();
+    }
+
+    private static List<MidiMessage> forgeCommands(BuildContext ctx, MidiDeviceBank bank, int program) {
+        var device = ctx.getDevice();
         MidiBankFormat midiBankFormat = device.getPresetFormat();
         String bankCommand = bank.getCommand();
         if (bankCommand != null && bankCommand
                 .contains("(")) {
             String commandCall = bankCommand
                     .replace("program", "$%02X".formatted(program));
-            return CommandCall.parse(device.getDefinitionFile(), commandCall)
+            return CommandCall.parse(device.getDefinitionFile(), device, commandCall)
                     .stream()
                     .flatMap(call -> {
                         CommandMacro macro = device.getMacro(call);
                         String cmd = macro.expand(call);
-                        return parseCommand(device.getDefinitionFile(), 0, midiBankFormat, device.getMacros(), cmd);
+                        return parseCommand(ctx, device.getMacros(), cmd);
                     })
                     .toList();
         } else {
             int bankId = midiBankFormat == MidiBankFormat.NO_BANK_PRG ? -1 : device.getBankId(bank.getName());
             int zeroBasedChannel = bank.getZeroBasedChannel();
             return switch (midiBankFormat) {
-                case NO_BANK_PRG -> forgeCommands(device, zeroBasedChannel, 0, 0, program);
-                case BANK_MSB_PRG, BANK_PRG_PRG -> forgeCommands(device, zeroBasedChannel, bankId, 0, program);
-                case BANK_LSB_PRG -> forgeCommands(device, zeroBasedChannel, 0, bankId, program);
+                case NO_BANK_PRG -> forgeCommands(ctx.setIdentifiers(0, 0, program));
+                case BANK_MSB_PRG, BANK_PRG_PRG -> forgeCommands(ctx.setIdentifiers(bankId, 0, program));
+                case BANK_LSB_PRG -> forgeCommands(ctx.setIdentifiers(0, bankId, program));
                 case BANK_MSB_LSB_PRG -> {
                     int msb = (bankId >> 8) & 0x7F;
                     int lsb = (bankId >> 0) & 0x7F;
-                    yield forgeCommands(device, zeroBasedChannel, msb, lsb, program);
+                    yield forgeCommands(ctx.setIdentifiers(msb, lsb, program));
                 }
             };
         }
     }
 
-    private static List<MidiMessage> forgeCommands(MidiDeviceDefinition device, int zeroBasedChannel, int msb, int lsb, int program) {
-        String definition = switch (device.getPresetFormat()) {
-            case NO_BANK_PRG -> "%d".formatted(program);
-            case BANK_MSB_PRG, BANK_PRG_PRG -> "%d-%d".formatted(msb, program);
-            case BANK_LSB_PRG -> "%d-%d".formatted(lsb, program);
-            case BANK_MSB_LSB_PRG -> "%d-%d-%d".formatted(msb, lsb, program);
+    private static List<MidiMessage> forgeCommands(BuildContext ctx) {
+        var ids = ctx.getIdentifiers();
+        String definition = switch (ctx.getDevice()
+                .getPresetFormat()) {
+            case NO_BANK_PRG -> "%d".formatted(ids.getPrg());
+            case BANK_MSB_PRG, BANK_PRG_PRG -> "%d-%d".formatted(ids.getMsb(), ids.getPrg());
+            case BANK_LSB_PRG -> "%d-%d".formatted(ids.getLsb(), ids.getPrg());
+            case BANK_MSB_LSB_PRG -> "%d-%d-%d".formatted(ids.getMsb(), ids.getLsb(), ids.getPrg());
         };
 
         try {
-            return parsePresetSelectCommand(zeroBasedChannel, device.getPresetFormat(), definition).toList();
+            return parsePresetSelectCommand(ctx, definition).toList();
         } catch (MidiError e) {
             throw new MidiError("Faulty preset definition:" + definition, e);
         }
@@ -99,15 +129,13 @@ public class MidiPresetBuilder {
      * One command template can produce multiple {@link MidiMessage}, this is why this method return a stream
      * <p>For instance, we often select a bankName, then select a program change. Two messages must be sent</p>
      *
-     * @param zeroBasedChannel MIDI channel where to activate this preset
-     * @param midiBankFormat   Which kind of MIDI message must be used to select this preset
-     * @param macros           Macros which can be used to generate the commands
-     * @param definition       Textual definition of the command template
-     * @return
+     * @param ctx        build context
+     * @param macros     Macros which can be used to generate the commands
+     * @param definition Textual definition of the command template
      */
-    private static Stream<MidiMessage> parseCommand(File configFile, int zeroBasedChannel, MidiBankFormat midiBankFormat, List<CommandMacro> macros, String definition) {
+    private static Stream<MidiMessage> parseCommand(BuildContext ctx, List<CommandMacro> macros, String definition) {
         try {
-            String expandedDefinition = getExpandedDefinitions(configFile, macros, definition);
+            String expandedDefinition = getExpandedDefinitions(ctx, macros, definition);
             return Arrays.stream(expandedDefinition.split(";"))
                     .map(String::trim)
                     .flatMap(def -> {
@@ -116,7 +144,7 @@ public class MidiPresetBuilder {
                         } else if (def.startsWith("B0") || def.startsWith("C0")) {
                             return parseMidiCommand(def);
                         }
-                        return parsePresetSelectCommand(zeroBasedChannel, midiBankFormat, def);
+                        return parsePresetSelectCommand(ctx, def);
                     });
         } catch (NumberFormatException | MidiError e) {
             throw new MidiError("Faulty preset definition:" + definition, e);
@@ -124,64 +152,68 @@ public class MidiPresetBuilder {
     }
 
     /**
-     * Given a list of command definition, resolve all macro in it
+     * Given a list of command definition separated by ";", resolve all macro in it
      *
-     * @param configFile  Where this definition is defined (used to log errors)
+     * @param ctx         build context
      * @param macros      list of known macros
-     * @param definitions The definitions to parse, can be a lsit of macro calls A();B();C()
-     * @return
+     * @param definitions The definitions to parse, can be a list of macro calls A();B();C()
      */
-    private String getExpandedDefinitions(File configFile, List<CommandMacro> macros, String definitions) {
+    private String getExpandedDefinitions(BuildContext ctx, List<CommandMacro> macros, String definitions) {
         String expanded = Arrays.stream(definitions.split(";"))
-                .map(definition -> getExpandedDefinition(configFile, macros, definition))
+                .map(definition -> getExpandedDefinition(ctx, macros, definition))
                 .collect(Collectors.joining(";"));
         if (expanded.contains("(")) {
-            return getExpandedDefinitions(configFile, macros, expanded);
+            return getExpandedDefinitions(ctx, macros, expanded);
         }
         return expanded;
     }
 
-    private String getExpandedDefinition(File configFile, List<CommandMacro> macros, String definition) {
+    /**
+     * Given a single command definition, resolve all macro in it
+     *
+     * @param ctx        build context
+     * @param macros     list of known macros
+     * @param definition The definition to parse, something like A(12 00)
+     */
+    private String getExpandedDefinition(BuildContext ctx, List<CommandMacro> macros, String definition) {
         return Optional.ofNullable(macros)
                 .map(nonNullMacros -> nonNullMacros.stream()
                         .filter(m -> m.matches(definition))
                         .findFirst()
-                        .map(m -> CommandCall.parse(configFile, definition)
+                        .map(m -> CommandCall.parse(ctx.getDevice()
+                                        .getDefinitionFile(), ctx.getDevice(), definition)
                                 .stream()
-                                .map(commandCall -> m.expand(commandCall))
+                                .map(m::expand)
                                 .collect(Collectors.joining(";")))
                         .orElse(definition))
                 .orElse(definition);
     }
 
     /**
-     * Parse a preset definition and generate the right sequence of midi message to select a patch.
+     * Parse a preset definition according to {@link MidiBankFormat} and generate the right sequence of midi message to select a patch.
      * <ul>
      *     <li>A program change message</li>
-     *     <li>A bankName select MSB message followed by a program change message</li>
-     *     <li>A bankName select LSB message followed by a program change message</li>
-     *     <li>A bankName select MSB message followed by a bankName select LSB message followed by a program change message</li>
+     *     <li>A bank select MSB message followed by a program change message</li>
+     *     <li>A bank select LSB message followed by a program change message</li>
+     *     <li>A bank select MSB message followed by a bank select LSB message followed by a program change message</li>
+     *     <li>Two program change messages</li>
      * </ul>
      *
-     * @param zeroBasedChannel which midi channel to use for the midi messages
-     * @param midiBankFormat   which format to generate
-     * @param definition       the definition of the preset
+     * @param ctx        build context
+     * @param definition the definition of the preset
      * @return a stream of Midi messages to select the patch on the given midi channel
-     * @throws InvalidMidiDataException
      */
-    private static Stream<MidiMessage> parsePresetSelectCommand(int zeroBasedChannel, MidiBankFormat midiBankFormat, String definition) {
+    private static Stream<MidiMessage> parsePresetSelectCommand(BuildContext ctx, String definition) {
 
-        List<Integer> ids = preparePresetSelectIdentifiers(midiBankFormat, definition);
+        List<Integer> ids = parsePresetSelector(ctx, definition);
         if (!ids.isEmpty()) {
-            int zeroBasedProgram = getProgramNumber(ids);
             try {
-                return switch (midiBankFormat) {
-                    case NO_BANK_PRG -> programChangeOnly(definition, zeroBasedChannel, ids, zeroBasedProgram);
-                    case BANK_MSB_PRG -> bankMsbThenProgramChange(definition, zeroBasedChannel, ids, zeroBasedProgram);
-                    case BANK_LSB_PRG -> bankLsbThenProgramChange(definition, zeroBasedChannel, ids, zeroBasedProgram);
-                    case BANK_MSB_LSB_PRG ->
-                            bankMsbLsbThenProgramChange(definition, zeroBasedChannel, ids, zeroBasedProgram);
-                    case BANK_PRG_PRG -> doubleProgramChange(definition, zeroBasedChannel, ids, zeroBasedProgram);
+                return switch (ctx.getMidiBankFormat()) {
+                    case NO_BANK_PRG -> programChangeOnly(ctx, definition, ids);
+                    case BANK_MSB_PRG -> bankMsbThenProgramChange(ctx, definition, ids);
+                    case BANK_LSB_PRG -> bankLsbThenProgramChange(ctx, definition, ids);
+                    case BANK_MSB_LSB_PRG -> bankMsbLsbThenProgramChange(ctx, definition, ids);
+                    case BANK_PRG_PRG -> doubleProgramChange(ctx, definition, ids);
                 };
             } catch (InvalidMidiDataException e) {
                 throw new MidiError(e);
@@ -191,76 +223,78 @@ public class MidiPresetBuilder {
         }
     }
 
-    private static int getProgramNumber(List<Integer> ids) {
-        return ids.getLast();
-    }
-
-    private static Stream<MidiMessage> bankMsbLsbThenProgramChange(String definition, int zeroBasedChannel, List<Integer> ids, int program) throws InvalidMidiDataException {
+    private static Stream<MidiMessage> bankMsbLsbThenProgramChange(BuildContext ctx, String definition, List<Integer> ids) throws InvalidMidiDataException {
         if (ids.size() != 3) {
             throw new MidiConfigError("Unexpected number of values given %s, should be 3, it is %d: %s".formatted(MidiBankFormat.BANK_MSB_LSB_PRG, ids.size(), definition));
         }
-        int bankMSB = ids.get(0);
-        int bankLSB = ids.get(1);
-        return Stream.of(new ShortMessage(ShortMessage.CONTROL_CHANGE, zeroBasedChannel, MidiPreset.BANK_SELECT_MSB, bankMSB),
-                new ShortMessage(ShortMessage.CONTROL_CHANGE, zeroBasedChannel, MidiPreset.BANK_SELECT_LSB, bankLSB),
-                new ShortMessage(ShortMessage.PROGRAM_CHANGE, zeroBasedChannel, program, 0));
+        ctx.setIdentifiers(ids.get(0), ids.get(1), ids.getLast());
+        return Stream.of(new ShortMessage(ShortMessage.CONTROL_CHANGE, ctx.getChannel(), MidiPreset.BANK_SELECT_MSB, ctx.identifiers.getMsb()),
+                new ShortMessage(ShortMessage.CONTROL_CHANGE, ctx.getChannel(), MidiPreset.BANK_SELECT_LSB, ctx.identifiers.getLsb()),
+                new ShortMessage(ShortMessage.PROGRAM_CHANGE, ctx.getChannel(), ctx.identifiers.getPrg(), 0));
     }
 
-    private static Stream<MidiMessage> bankLsbThenProgramChange(String definition, int zeroBasedChannel, List<Integer> ids, int program) throws InvalidMidiDataException {
+    private static Stream<MidiMessage> bankLsbThenProgramChange(BuildContext ctx, String definition, List<Integer> ids) throws InvalidMidiDataException {
         if (ids.size() != 2) {
             throw new MidiConfigError("Unexpected number of values given %s, should be 2, it is %d: %s".formatted(MidiBankFormat.BANK_LSB_PRG, ids.size(), definition));
         }
-        int bankLSB = ids.get(0);
+        ctx.setIdentifiers(null, ids.getFirst(), ids.getLast());
         return Stream.of(
-                new ShortMessage(ShortMessage.CONTROL_CHANGE, zeroBasedChannel, MidiPreset.BANK_SELECT_LSB, bankLSB),
-                new ShortMessage(ShortMessage.PROGRAM_CHANGE, zeroBasedChannel, program, 0));
+                new ShortMessage(ShortMessage.CONTROL_CHANGE, ctx.getChannel(), MidiPreset.BANK_SELECT_LSB, ctx.identifiers.getLsb()),
+                new ShortMessage(ShortMessage.PROGRAM_CHANGE, ctx.getChannel(), ctx.identifiers.getPrg(), 0));
     }
 
-    private static Stream<MidiMessage> bankMsbThenProgramChange(String definition, int zeroBasedChannel, List<Integer> ids, int program) throws InvalidMidiDataException {
+    private static Stream<MidiMessage> bankMsbThenProgramChange(BuildContext ctx, String definition, List<Integer> ids) throws InvalidMidiDataException {
         if (ids.size() != 2) {
             throw new MidiConfigError("Unexpected number of values given %s, should be 2, it is %d: %s".formatted(MidiBankFormat.BANK_MSB_PRG, ids.size(), definition));
         }
-        int bankMSB = ids.get(0);
+        ctx.setIdentifiers(ids.getFirst(), null, ids.getLast());
         return Stream.of(
-                new ShortMessage(ShortMessage.CONTROL_CHANGE, zeroBasedChannel, MidiPreset.BANK_SELECT_MSB, bankMSB),
-                new ShortMessage(ShortMessage.PROGRAM_CHANGE, zeroBasedChannel, program, 0));
+                new ShortMessage(ShortMessage.CONTROL_CHANGE, ctx.getChannel(), MidiPreset.BANK_SELECT_MSB, ctx.identifiers.getMsb()),
+                new ShortMessage(ShortMessage.PROGRAM_CHANGE, ctx.getChannel(), ctx.identifiers.getPrg(), 0));
     }
 
-    private static Stream<MidiMessage> programChangeOnly(String definition, int zeroBasedChannel, List<Integer> ids, int program) throws InvalidMidiDataException {
+    private static Stream<MidiMessage> programChangeOnly(BuildContext ctx, String definition, List<Integer> ids) throws InvalidMidiDataException {
         if (ids.size() != 1) {
             throw new MidiConfigError("Unexpected number of values given %s, should be 1, it is %d: %s".formatted(MidiBankFormat.BANK_MSB_PRG, ids.size(), definition));
         }
+        ctx.setIdentifiers(null, null, ids.getLast());
         return Stream.of(
-                new ShortMessage(ShortMessage.PROGRAM_CHANGE, zeroBasedChannel, program, 0));
+                new ShortMessage(ShortMessage.PROGRAM_CHANGE, ctx.getChannel(), ctx.identifiers.getPrg(), 0));
     }
 
-    private static Stream<MidiMessage> doubleProgramChange(String definition, int zeroBasedChannel, List<Integer> ids, int program) throws InvalidMidiDataException {
+    private static Stream<MidiMessage> doubleProgramChange(BuildContext ctx, String definition, List<Integer> ids) throws InvalidMidiDataException {
         if (ids.size() != 2) {
             throw new MidiConfigError("Unexpected number of values given %s, should be 1, it is %d: %s".formatted(MidiBankFormat.BANK_PRG_PRG, ids.size(), definition));
         }
+        Integer first = ids.getFirst();
+        ctx.setIdentifiers(null, first, ids.getLast());
         return Stream.of(
-                new ShortMessage(ShortMessage.PROGRAM_CHANGE, zeroBasedChannel, ids.getFirst(), 0),
-                new ShortMessage(ShortMessage.PROGRAM_CHANGE, zeroBasedChannel, program, 0));
+                new ShortMessage(ShortMessage.PROGRAM_CHANGE, ctx.getChannel(), ctx.identifiers.getLsb(), 0),
+                new ShortMessage(ShortMessage.PROGRAM_CHANGE, ctx.getChannel(), ctx.identifiers.getPrg(), 0));
     }
 
     /**
      * A preset selector can have a maximum of 3 identifiers:
      * <ul>
      *     <li>prg: program change only</li>
-     *     <li>lsb,prg: bankName select LSB then program change</li>
+     *     <li>lsb,prg: bank select LSB then program change</li>
      *     <li>prg,prg: double program change (Yamaha TG-77)</li>
-     *     <li>msb,lsb,prg: bankName select MSB,LSB then program change</li>
+     *     <li>msb,lsb,prg: bank select MSB,LSB then program change</li>
      * </ul>
      *
      * @return A list of identifiers, the last one is always the program change
      */
-    private static List<Integer> preparePresetSelectIdentifiers(MidiBankFormat midiBankFormat, String definition) {
-        int expectedSize = switch (midiBankFormat) {
+    public static List<Integer> parsePresetSelector(MidiBankFormat presetFormat, String definition) {
+        return parsePresetSelector(BuildContext.of(presetFormat), definition);
+    }
+
+    private static List<Integer> parsePresetSelector(BuildContext ctx, String definition) {
+        int expectedStringSize = switch (ctx.getMidiBankFormat()) {
             case NO_BANK_PRG -> 2;
             case BANK_MSB_PRG, BANK_LSB_PRG, BANK_PRG_PRG -> 4;
             case BANK_MSB_LSB_PRG -> 6;
         };
-        if (!definition.contains("-") && expectedSize > 2 && definition.length() == expectedSize) {
+        if (!definition.contains("-") && expectedStringSize > 2 && definition.length() == expectedStringSize) {
             // Hexadecimal definition
             List<Integer> ids = new ArrayList<>();
             for (int i = 0; i < definition.length(); i += 2) {
@@ -271,7 +305,7 @@ public class MidiPresetBuilder {
                     throw new MidiConfigError("Unable to parse hexadecimal command definition:" + definition);
                 }
             }
-            chekIds(definition, midiBankFormat, ids);
+            chekIds(ctx, definition, ids);
             return ids;
         } else {
             // Decimal definition with "-" as separator
@@ -284,7 +318,7 @@ public class MidiPresetBuilder {
                         .filter(Objects::nonNull)
                         .map(Integer::parseInt)
                         .collect(Collectors.toList());
-                chekIds(definition, midiBankFormat, ids);
+                chekIds(ctx, definition, ids);
                 return ids;
             } else {
                 throw new MidiConfigError("Unable to parse command definition:" + definition);
@@ -292,14 +326,15 @@ public class MidiPresetBuilder {
         }
     }
 
-    private static void chekIds(String definition, MidiBankFormat midiBankFormat, List<Integer> ids) {
+    private static void chekIds(BuildContext ctx, String definition, List<Integer> ids) {
         if (!ids.stream()
                 .filter(id -> id > 127)
                 .toList()
                 .isEmpty()) {
             throw new MidiError("The command definition '%s' contains out of range values: '%s' given MidiBankFormat: %s".formatted(definition, ids.stream()
                     .map(String::valueOf)
-                    .collect(Collectors.joining()), midiBankFormat.name()));
+                    .collect(Collectors.joining()), ctx.getMidiBankFormat()
+                    .name()));
         }
     }
 
@@ -311,7 +346,7 @@ public class MidiPresetBuilder {
                 String byteValue = matcher.group(1);
                 list.add((byte) Integer.parseInt(byteValue, 16));
             } catch (NumberFormatException e) {
-                throw new MidiError("Unexpected sysex command definition: " + definition);
+                throw new MidiError("Unexpected sysEx command definition: " + definition);
             }
         }
         try {
@@ -329,12 +364,12 @@ public class MidiPresetBuilder {
                 String byteValue = matcher.group(1);
                 list.add((byte) Integer.parseInt(byteValue, 16));
             } catch (NumberFormatException e) {
-                throw new MidiError("Unexpected sysex command definition: " + definition);
+                throw new MidiError("Unexpected sysEx command definition: " + definition);
             }
         }
         byte[] payload = new byte[list.size()];
         IntStream.range(0, list.size())
-                .forEach(i -> payload[i] = (byte) list.get(i));
+                .forEach(i -> payload[i] = list.get(i));
         try {
             return Stream.of(new SysexMessage(payload, payload.length));
         } catch (InvalidMidiDataException e) {
@@ -348,18 +383,59 @@ public class MidiPresetBuilder {
             byte[] data = Files.readAllBytes(sysExFile.toPath());
             ByteArrayOutputStream evt = new ByteArrayOutputStream();
 
-            for (int i = 0; i < data.length; i++) {
-                evt.write(data[i]);
-                if (data[i] == (byte) 0xF7) {
+            for (byte datum : data) {
+                evt.write(datum);
+                if (datum == (byte) 0xF7) {
                     byte[] payload = evt.toByteArray();
-                    MidiMessage sysex = new SysexMessage(payload, payload.length);
-                    commands.add(sysex);
+                    MidiMessage sysEx = new SysexMessage(payload, payload.length);
+                    commands.add(sysEx);
                     evt.reset();
                 }
             }
-            return new MidiPreset(deviceMode, bank, sysExFile.getName(), 0, commands, List.of(MidiPreset.NO_CC), null, null);
+            return new MidiPreset(deviceMode, bank, sysExFile.getName(), 0, commands, List.of(MidiPreset.NO_CC), null, null, null);
         } catch (IOException | InvalidMidiDataException e) {
             throw new MidiError(e);
         }
+    }
+
+    @Getter
+    @Setter
+    private class BuildContext {
+        MidiDeviceDefinition device;
+        private Integer channel;
+        private List<MidiMessage> midiMessages;
+        private MidiBankFormat midiBankFormat;
+        private PresetIdentifiers identifiers;
+
+        private BuildContext(MidiBankFormat midiBankFormat) {
+            this.midiBankFormat = midiBankFormat;
+        }
+
+        private BuildContext(MidiDeviceDefinition device, int channel, PresetIdentifiers identifiers) {
+            this.device = device;
+            this.channel = channel;
+            this.identifiers = identifiers;
+            this.midiBankFormat = device.getPresetFormat();
+        }
+
+        private BuildContext(MidiDeviceDefinition device, int channel) {
+            this.device = device;
+            this.channel = channel;
+            this.midiBankFormat = device.getPresetFormat();
+        }
+
+        public static BuildContext of(MidiDeviceDefinition device, int channel) {
+            return new BuildContext(device, channel);
+        }
+
+        public static BuildContext of(MidiBankFormat midiBankFormat) {
+            return new BuildContext(midiBankFormat);
+        }
+
+        public BuildContext setIdentifiers(Integer msb, Integer lsb, Integer prg) {
+            this.identifiers = new PresetIdentifiers(msb, lsb, prg);
+            return this;
+        }
+
     }
 }
